fixed scrollbar overflow by moving margin-bottom from wrapper to #profilePic

--- a/src/Components/About/_about.scss
+++ b/src/Components/About/_about.scss
@@ -2,24 +2,23 @@
   background-color: $background-white;
   display: grid;
   grid-auto-rows: minmax(min-content, max-content);
-  margin-top: 6%;
 }
 .about-content-block {
   display: grid;
   padding: 0 6% 0 6%;
-  width: 100%;
 }
 #profilePic {
   border-radius: 50%;
   height: auto;
-  margin-bottom: 12%;
+  margin-bottom: 8vh;
+  margin-top: 4vh;
   justify-self: end;
   width: 14%;
 }
 #aboutTextWrapper {
-  margin-bottom: 14%;
+  margin-bottom: 8vh;
   .about-text {
-    @include fluid-type(font-size, $min-width, $max-width, 12px, 26px);
+    @include fluid-type(font-size, $min-width, $max-width, 12px, 24px);
     color: $gray-text;
     padding: 2%;
   }
@@ -27,10 +26,9 @@
 #logosWrapper {
   display: flex;
   align-items: center;
-  flex-flow: row wrap;
+  // flex-flow: row wrap;
   justify-content: space-around;
   .about-logo {
-    height: auto;
     width: 22%;
   }
 }
