--- a/src/Components/Contact/_contact.scss
+++ b/src/Components/Contact/_contact.scss
@@ -1,7 +1,7 @@
 .contact-wrapper {
   background-color: $background-gray;
   color: $white-text;
-  height: auto;
+  // height: auto;
   padding-bottom: 7vh;
   width: 100%;
 }
